@@ -1,5 +1,10 @@
 2007-02-19  Michael Smith  <msmith@fluendo.com>
 
+	* flumotion/component/producers/wms.py:
+	  Some internal cleanups.
+
+2007-02-19  Michael Smith  <msmith@fluendo.com>
+
 	* Makefile.am:
 	  Add things for pychecker to pycheck
 	* configure.ac:
